--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^137.1.0",
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.13"
   }
 }
