--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=8000
 CLIENT_ID="288556331838-pv18scatla236etu1gon3mnjlgfqtupl.apps.googleusercontent.com"
+IOS_CLIENT_ID="288556331838-8g53pe6dsmhqk2gilns8134tlqldmm1o.apps.googleusercontent.com"
 CLIENT_SECRET="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"
 REDIRECT_URI="http://localhost:8000/auth/callback"
 MONGO_URI="mongodb+srv://businesswithtanishgarg:jcTpIbBjqQs5YyON@cluster0.ocpn0ym.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
